# rrrie-cdss

./: .env.example  .gitignore  DLLM_IMPLEMENTATION_PLAN.md  README.md  pyproject.toml  requirements.txt  run.py  swarm_verify.json  test_l1.py  test_output.txt  test_output2.txt  test_output3.txt  test_swarm.py  test_swarm_2.py
config/: settings.py
data/: memory.db-shm  memory.db-wal
gui/: server.py
gui/static/: app.js  index.html  style.css
src/core/: __init__.py  paradox_resolver.py  zebra_detector.py
src/knowledge/: evidence_store.py  icl_engine.py  knowledge_ingestor.py
src/llm/: gemini_client.py  groq_client.py  llama_cpp_client.py  prompt_templates.py  stage_adapter.py
src/memory/: __init__.py  case_store.py
src/models/: __init__.py
src/pipeline/: __init__.py  confidence_engine.py  dllm_r0.py  drug_lookup.py  ie_layers.py  iteration_ctrl.py  medical_knowledge.py  orchestrator.py  router.py  safety_net.py  stages.py  streaming.py  token_budget.py  treatment_safety.py
src/tools/: clinical_trials_tool.py  medlineplus_tool.py  openfda_tool.py  pharmacology_tool.py  pubmed_tool.py  semantic_scholar_tool.py  web_search_tool.py
src/utils/: logger.py  medical_codes.py  safety_checks.py
tests/: __init__.py  conftest.py  narrative_cases.py  test_dynamic_who.py  test_e2e_medical.py  test_tools.py  test_utils.py
tests/test_cases/: aki_case.json  ami_case.json  anaphylaxis_case.json  appendicitis_case.json  asthma_case.json  copd_case.json  depression_case.json  dka_case.json  dvt_case.json  ectopic_pregnancy_case.json  heart_failure_case.json  (+25 more)
